say_hello bug fix

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+commit ea9dc2e0e8150f85487bcbc5af9b43ba78e0e6ef
+Author: nojimage <nojimage at gmail.com>
+Date:   Fri Oct 9 10:12:33 2009 +0900
+
+    add CHANGELOG
+
 commit 3ae6af45b6ed228bdd42094c2ff150edfe75b2ba
 Author: nojimage <nojimage@gmail.com>
 Date:   Wed Oct 7 18:18:33 2009 +0900
